--- a/project/project-core/src/main/webapp/documents/warehouse/externalOutgoing.xhtml
+++ b/project/project-core/src/main/webapp/documents/warehouse/externalOutgoing.xhtml
@@ -36,6 +36,7 @@
 									</div>
 									<div class="box-body">
 										<h:form>
+											<p:growl id="growl" showDetail="true" sticky="true"/>
 											<p:panel visible="#{externalInvoiceController.visible}">
 												<cc:warehouseInvoiceTop controller="#{externalInvoiceController}" />
 												<p:spacer style="height : 10px"/>
