--- a/project/project-core/src/main/webapp/documents/service/serviceProductsRequest.xhtml
+++ b/project/project-core/src/main/webapp/documents/service/serviceProductsRequest.xhtml
@@ -92,8 +92,8 @@
                                             </div>
                                         </div>
                                         <p:spacer style="height: 10px"/>
-
-                                        <div class="row">
+                                        <cc:buttonBox controller="#{serviceProductsRequestTemplateBean}"/>
+                                        <!--<div class="row">
                                             <div class="col-sm-12">
                                                 <p:commandButton value="Zapisz"
                                                                  styleClass="btn btn-primary btn-lg pull-right"
@@ -104,7 +104,7 @@
                                                                  styleClass="btn btn-primary btn-lg pull-right"
                                                                  style="margin-right:  10px" ajax="true"/>
                                             </div>
-                                        </div>
+                                        </div>-->
                                     </h:form>
                                 </div>
                             </div>
