--- a/project/project-core/src/main/webapp/documents/service/serviceFixSummary.xhtml
+++ b/project/project-core/src/main/webapp/documents/service/serviceFixSummary.xhtml
@@ -5,6 +5,7 @@
       xmlns:h="http://java.sun.com/jsf/html"
       xmlns:p="http://primefaces.org/ui"
       xmlns:f="http://xmlns.jcp.org/jsf/core"
+      xmlns:cc="http://java.sun.com/jsf/composite/components"
       xmlns="http://www.w3.org/1999/xhtml">
 
 
@@ -85,8 +86,9 @@
                                             </div>
                                         </div>
                                         <p:spacer style="height: 10px"/>
+                                        <cc:buttonBox controller="#{serviceFixSummaryTemplateBean}"/>
 
-                                        <div class="row">
+                                        <!--<div class="row">
                                             <div class="col-sm-12">
                                                 <p:commandButton value="Zapisz"
                                                                  styleClass="btn btn-primary btn-lg pull-right"
@@ -97,7 +99,7 @@
                                                                  styleClass="btn btn-primary btn-lg pull-right"
                                                                  style="margin-right:  10px" ajax="true"/>
                                             </div>
-                                        </div>
+                                        </div>-->
                                     </h:form>
                                 </div>
                             </div>
