--- a/project/project-core/src/main/webapp/login/error.xhtml
+++ b/project/project-core/src/main/webapp/login/error.xhtml
@@ -1,16 +1,49 @@
 <?xml version='1.0' encoding='UTF-8' ?>
 <!DOCTYPE html PUBLIC "-//W3C//DTD XHTML 1.0 Transitional//EN" "http://www.w3.org/TR/xhtml1/DTD/xhtml1-transitional.dtd">
-<html xmlns="http://www.w3.org/1999/xhtml" xmlns:h="http://java.sun.com/jsf/html" xmlns:p="http://primefaces.org/ui">
+<html xmlns="http://www.w3.org/1999/xhtml"
+	  xmlns:h="http://xmlns.jcp.org/jsf/html"
+	  xmlns:p="http://primefaces.org/ui" class="bg-black"
+	  xmlns:ui="http://xmlns.jcp.org/jsf/facelets"
+	  xmlns:f="http://xmlns.jcp.org/jsf/core">
+
 <h:head>
-	<title>Panel zajebistosci</title>
+	<ui:param name="root" value="#{request.contextPath}" />
+	<title>System sprzedaży sieciowej - błąd logowania</title>
+	<meta content='width=device-width, initial-scale=1, maximum-scale=1, user-scalable=no' name='viewport' />
+	<!-- bootstrap 3.0.2 -->
+	<link href="#{root}/resources/css/bootstrap.min.css" rel="stylesheet" type="text/css" />
+	<!-- font Awesome -->
+	<link href="#{root}/resources/css/font-awesome.min.css" rel="stylesheet" type="text/css" />
+	<!-- Theme style -->
+	<link href="#{root}/resources/css/AdminLTE.css" rel="stylesheet" type="text/css" />
+
+	<!-- HTML5 Shim and Respond.js IE8 support of HTML5 elements and media queries -->
+	<!-- WARNING: Respond.js doesn't work if you view the page via file:// -->
+	<!--[if lt IE 9]>
+      <script src="https://oss.maxcdn.com/libs/html5shiv/3.7.0/html5shiv.js"></script>
+      <script src="https://oss.maxcdn.com/libs/respond.js/1.3.0/respond.min.js"></script>
+    <![endif]-->
 </h:head>
-<h:body>
-	<form action="#{request.contextPath}/j_spring_security_check" method="post">
-		<p:panel id="login-panel">
-			<h:panelGrid columns="2">
-				<p:outputLabel value="Podales hujowy login lub hasło " />
-			</h:panelGrid>
-		</p:panel>
-	</form>
-</h:body>
+
+<body class="bg-black">
+<div class="form-box" id="login-box">
+	<div class="header">Błąd logowania</div>
+	<h:form id="registrationComplete-form">
+		<div class="body bg-gray" style="text-align: center; padding-top: 10px;padding-bottom: 10px;">
+			<h1 style="font-size: 20px;">Podałeś zły login lub hasło!</h1>
+		</div>
+		<div class="footer">
+			<p:commandButton value="Logowanie" action="login" styleClass="btn bg-olive btn-block"/>
+		</div>
+	</h:form>
+	<br />
+</div>
+
+
+<!-- jQuery 2.0.2 -->
+<script src="http://ajax.googleapis.com/ajax/libs/jquery/2.0.2/jquery.min.js"></script>
+<!-- Bootstrap -->
+<script src="../../js/bootstrap.min.js" type="text/javascript"></script>
+
+</body>
 </html>
