--- a/project/project-core/src/main/webapp/registration/registration.xhtml
+++ b/project/project-core/src/main/webapp/registration/registration.xhtml
@@ -4,64 +4,65 @@
       xmlns:h="http://xmlns.jcp.org/jsf/html"
       xmlns:p="http://primefaces.org/ui" class="bg-black"
       xmlns:ui="http://xmlns.jcp.org/jsf/facelets"
-        >
+      xmlns:f="http://xmlns.jcp.org/jsf/core">
 
-    <h:head>
-        <ui:param name="root" value="#{request.contextPath}" />
-        <title>System sprzedaży sieciowej - rejestracja</title>
-        <meta content='width=device-width, initial-scale=1, maximum-scale=1, user-scalable=no' name='viewport' />
-        <!-- bootstrap 3.0.2 -->
-        <link href="#{root}/resources/css/bootstrap.min.css" rel="stylesheet" type="text/css" />
-        <!-- font Awesome -->
-        <link href="#{root}/resources/css/font-awesome.min.css" rel="stylesheet" type="text/css" />
-        <!-- Theme style -->
-        <link href="#{root}/resources/css/AdminLTE.css" rel="stylesheet" type="text/css" />
+<h:head>
+    <ui:param name="root" value="#{request.contextPath}" />
+    <title>System sprzedaży sieciowej - rejestracja</title>
+    <meta content='width=device-width, initial-scale=1, maximum-scale=1, user-scalable=no' name='viewport' />
+    <!-- bootstrap 3.0.2 -->
+    <link href="#{root}/resources/css/bootstrap.min.css" rel="stylesheet" type="text/css" />
+    <!-- font Awesome -->
+    <link href="#{root}/resources/css/font-awesome.min.css" rel="stylesheet" type="text/css" />
+    <!-- Theme style -->
+    <link href="#{root}/resources/css/AdminLTE.css" rel="stylesheet" type="text/css" />
 
-        <!-- HTML5 Shim and Respond.js IE8 support of HTML5 elements and media queries -->
-        <!-- WARNING: Respond.js doesn't work if you view the page via file:// -->
-        <!--[if lt IE 9]>
-          <script src="https://oss.maxcdn.com/libs/html5shiv/3.7.0/html5shiv.js"></script>
-          <script src="https://oss.maxcdn.com/libs/respond.js/1.3.0/respond.min.js"></script>
-        <![endif]-->
-    </h:head>
+    <!-- HTML5 Shim and Respond.js IE8 support of HTML5 elements and media queries -->
+    <!-- WARNING: Respond.js doesn't work if you view the page via file:// -->
+    <!--[if lt IE 9]>
+      <script src="https://oss.maxcdn.com/libs/html5shiv/3.7.0/html5shiv.js"></script>
+      <script src="https://oss.maxcdn.com/libs/respond.js/1.3.0/respond.min.js"></script>
+    <![endif]-->
 
-    <body class="bg-black">
-        <div class="form-box" id="login-box" style="margin-top: 15px;">
-            <div class="header">Rejestracja</div>
-            <h:form id="addNewUser-form">
-                <div class="body bg-gray">
-                    <p:messages autoUpdate="true"/>
-                    <div class="form-group">
-                        <p:outputLabel value="#{registrationBean.pendingInvitationDTO.email}" styleClass="form-control"/>
-                    </div>
-                    <div class="form-group">
-                        <p:outputLabel value="#{registrationBean.pendingInvitationDTO.roleDTO.roleName}" styleClass="form-control"/>
-                    </div>
-                    <div class="form-group">
-                        <p:password placeholder="Hasło" value="#{registrationBean.userDTO.password}" styleClass="form-control"/>
-                    </div>
-                    <div class="form-group">
-                        <p:password placeholder="Powtórz hasło" value="#{registrationBean.repeatPassword}" styleClass="form-control"/>
-                    </div>
-                    <div class="form-group">
-                        <p:inputText placeholder="Imię" value="#{registrationBean.userDTO.firstName}" styleClass="form-control"/>
-                    </div>
-                    <div class="form-group">
-                        <p:inputText placeholder="Nazwisko" value="#{registrationBean.userDTO.secondName}" styleClass="form-control"/>
-                    </div>
-                </div>
-                <div class="footer">
-                    <p:commandButton value="Rejestracja" action="#{registrationBean.register}" styleClass="btn bg-olive btn-block"/>
-                </div>
-            </h:form>
-            <br />
+</h:head>
+
+<body class="bg-black">
+<div class="form-box" id="login-box" style="margin-top: 15px;">
+    <div class="header">Rejestracja</div>
+    <h:form id="addNewUser-form">
+        <div class="body bg-gray">
+            <p:messages autoUpdate="true"/>
+            <div class="form-group">
+                <p:outputLabel value="#{registrationBean.pendingInvitationDTO.email}" styleClass="form-control"/>
+            </div>
+            <div class="form-group">
+                <p:outputLabel value="#{registrationBean.pendingInvitationDTO.role.name}" styleClass="form-control"/>
+            </div>
+            <div class="form-group">
+                <p:password placeholder="Hasło" value="#{registrationBean.userDTO.password}" styleClass="form-control"/>
+            </div>
+            <div class="form-group">
+                <p:password placeholder="Powtórz hasło" value="#{registrationBean.repeatPassword}" styleClass="form-control"/>
+            </div>
+            <div class="form-group">
+                <p:inputText placeholder="Imię" value="#{registrationBean.userDTO.firstName}" styleClass="form-control"/>
+            </div>
+            <div class="form-group">
+                <p:inputText placeholder="Nazwisko" value="#{registrationBean.userDTO.secondName}" styleClass="form-control"/>
+            </div>
         </div>
+        <div class="footer">
+            <p:commandButton value="Rejestracja" ajax="true" actionListener="#{registrationBean.register}" styleClass="btn bg-olive btn-block"/>
+        </div>
+    </h:form>
+    <br />
+</div>
 
 
-        <!-- jQuery 2.0.2 -->
-        <script src="http://ajax.googleapis.com/ajax/libs/jquery/2.0.2/jquery.min.js"></script>
-        <!-- Bootstrap -->
-        <script src="../../js/bootstrap.min.js" type="text/javascript"></script>
+<!-- jQuery 2.0.2 -->
+<script src="http://ajax.googleapis.com/ajax/libs/jquery/2.0.2/jquery.min.js"></script>
+<!-- Bootstrap -->
+<script src="../../js/bootstrap.min.js" type="text/javascript"></script>
 
-    </body>
+</body>
 </html>
