--- a/project/project-core/src/main/webapp/login/login.xhtml
+++ b/project/project-core/src/main/webapp/login/login.xhtml
@@ -27,9 +27,11 @@
                 </div>
                 <div class="footer">
                     <button class="btn bg-olive btn-block">Zaloguj się</button>
-                    <a href="#forgotpassword">Nie pamiętasz hasła?</a>
                 </div>
             </form>
+            <h:form>
+                <h:commandLink value="Nie pamiętasz hasła?" action="forgotpassword" />
+            </h:form>
         </div>
 
         <!-- jQuery 2.0.2 -->
