--- a/project/project-core/src/main/webapp/documents/saleDocuments/vatInvoice.xhtml
+++ b/project/project-core/src/main/webapp/documents/saleDocuments/vatInvoice.xhtml
@@ -160,7 +160,7 @@
                                                 </div>
                                             </div>
                                             <p:spacer style="height : 10px"/>
-                                            <cc:warehouseInvoiceBottom controller="#{vatInvoiceController}"/>
+                                            <cc:invoiceBottom controller="#{vatInvoiceController}"/>
                                             <p:spacer style="height : 10px"/>
                                             <cc:buttonBox controller="#{vatInvoiceController}"/>
                                         </p:panel>
