--- a/project/project-core/src/main/webapp/documents/warehouse/internalOutgoing.xhtml
+++ b/project/project-core/src/main/webapp/documents/warehouse/internalOutgoing.xhtml
@@ -40,7 +40,7 @@
 											<p:panel visible="#{internalInvoiceController.visible}">
 												<cc:invoiceGoodList controller="#{internalInvoiceController}" widthValue="107%"/>
 												<p:spacer style="height : 10px"/>
-												<cc:warehouseInvoiceBottom controller="#{internalInvoiceController}" />
+												<cc:invoiceBottom controller="#{internalInvoiceController}" />
 												<p:spacer style="height : 10px"/>
 												<cc:buttonBox controller="#{internalInvoiceController}"/>
 											</p:panel>
