--- a/project/project-core/src/main/webapp/documents/saleDocuments/vatInvoiceList.xhtml
+++ b/project/project-core/src/main/webapp/documents/saleDocuments/vatInvoiceList.xhtml
@@ -1,9 +1,10 @@
 <?xml version='1.0' encoding='UTF-8' ?>
 <!DOCTYPE html PUBLIC "-//W3C//DTD XHTML 1.0 Transitional//EN" "http://www.w3.org/TR/xhtml1/DTD/xhtml1-transitional.dtd">
-<html xmlns="http://www.w3.org/1999/xhtml" xmlns:ui="http://java.sun.com/jsf/facelets"
+<html xmlns="http://www.w3.org/1999/xhtml"
+      xmlns:ui="http://java.sun.com/jsf/facelets"
       xmlns:h="http://java.sun.com/jsf/html"
-      xmlns:p="http://primefaces.org/ui"
-      xmlns:f="http://xmlns.jcp.org/jsf/core">
+      xmlns:cc="http://java.sun.com/jsf/composite/components">
+
     <h:body>
         <ui:param name="root" value="#{request.contextPath}" />
         <ui:composition template="../../layout/main-template.xhtml">
@@ -19,71 +20,25 @@
                         </ol>
                     </section>
 
-                    <!-- Main content -->
                     <section class="content">
                         <div class="row">
                             <div class="col-xs-12">
                                 <div class="box">
                                     <div class="box-header">
-                                        <h3 class="box-title">Dokumenty sprzedaży</h3>
+                                        <h3 class="page-header col-xs-12">
+                                            Lista dokumentów zewnętrznych
+                                            <small class="pull-right">Data: #{constantElements.currentDateValue}</small>
+                                        </h3>
                                     </div>
-                                    <div class="box-body table-responsive">
+                                    <div class="box-body">
                                         <h:form>
-                                            <p:dataTable id="documentsTableId" var="invoice" tableStyleClass="table table-bordered dataTable" value="#{invoicesTableBean.invoices}">
-                                                <p:column headerText="Symbol" sortBy="symbol" >
-                                                    <h:outputText value="#{invoice.symbol}" />
-                                                </p:column>
-
-                                                <p:column headerText="Symbol kontrahenta" sortBy="invoice.contractor.symbol" style="width: 350px">
-                                                    <h:outputText value="#{invoice.contractor.symbol}" />
-                                                </p:column>
-                                                <p:column headerText="Nazwa kontrahenta" sortBy="invoice.contractor.name">
-                                                    <h:outputText value="#{invoice.contractor.name}" />
-                                                </p:column>
-
-                                                <p:column headerText="Data wystawienia" sortBy="invoice.documentDate" styleClass="text-right">
-                                                    <h:outputText value="#{invoice.documentDate}" >
-                                                        <f:convertDateTime pattern="dd/MM/yyyy" timeZone="CET" />
-                                                    </h:outputText>
-                                                </p:column>
-
-                                                <p:column headerText="Data operacji" sortBy="invoice.saleDate" styleClass="text-right">
-                                                    <h:outputText value="#{invoice.saleDate}">
-                                                        <f:convertDateTime pattern="dd/MM/yyyy" timeZone="CET" />
-                                                    </h:outputText>
-                                                </p:column>
-
-                                                <p:column headerText="Wartość" sortBy="goodGroup.invoice.total" styleClass="text-right">
-                                                    <h:outputText value="#{invoice.total}">
-                                                        <f:convertNumber type="number" groupingUsed="true" minFractionDigits="2" pattern="#0.00" />
-                                                    </h:outputText>
-                                                </p:column>
-                                                <p:column headerText="Akcja" style="width: 155px" styleClass="text-center">
-                                                    <p:commandLink style="margin-right: 10px;"
-                                                                   styleClass="btn btn-success btn-xs"
-                                                                   action="#{vatInvoiceController.editInvoice(invoice.symbol,warehouseGoodsBean.warehouseId)}">
-                                                        <i class="glyphicon glyphicon-pencil"></i> Edytuj
-                                                    </p:commandLink>
-                                                    <p:commandLink styleClass="btn btn-danger btn-xs" update="documentsTableId" ajax="true" action="#{invoicesTableBean.removeInvoice(invoice)}">
-                                                        <i class="glyphicon glyphicon-minus"></i> Usuń
-                                                    </p:commandLink>
-                                                </p:column>
-                                            </p:dataTable>
+                                            <cc:warehouseInvoiceList controller="#{invoicesTableBean}" editable="true"/>
                                         </h:form>
-                                    </div><!-- /.box-body -->
-                                    <!--<div class="box-footer clearfix">
-                                        <ul class="pagination pagination-sm no-margin pull-right">
-                                            <li><a href="#">«</a></li>
-                                            <li><a href="#">1</a></li>
-                                            <li><a href="#">2</a></li>
-                                            <li><a href="#">3</a></li>
-                                            <li><a href="#">»</a></li>
-                                        </ul>
-                                    </div>-->
+                                    </div>
                                 </div>
                             </div>
                         </div>
-                    </section><!-- /.content -->
+                    </section>
                 </aside><!-- /.right-side -->
             </ui:define>
         </ui:composition>
